--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,6 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
-  background-color: #f5f5f5;
 }
 
 .roboto-thin {
@@ -84,12 +83,11 @@
   position: relative;
   height: 90vh;
   width: 100%;
-  background-image: url('/heroimg.jpg');
+  background-image: url('/hand.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   overflow: hidden;
-  /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 .hero::before {
@@ -99,11 +97,28 @@
   left: 0;
   width: 100%;
   height: 100%;
-  /* background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)); */
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));
 }
 .hero-heading {
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
   font-weight: 500;
   text-align: start;
+  color: #fff;
+}
+
+.about-heading {
+  font-family: "Roboto", sans-serif;
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: start;
+  color: #000;
+}
+
+.about-text {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  text-align: start;
+  line-height: 1.5;
 }
