--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
+:root{
+  --bg: "#effdfe";
+  --txt: "#103d66";
+}
+
+.title {
+  color: #103d66;
+}
+
 .body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -112,7 +121,7 @@
   font-size: 2rem;
   font-weight: 500;
   text-align: start;
-  color: #000;
+  color: #103d66;
 }
 
 .about-text {
